err/melcloud.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dataclasses-0.3.dist-info'...
Compiling './lib/python3.5/site-packages/dataclasses.py'...
***   File "./lib/python3.5/site-packages/dataclasses.py", line 82
    return f'{self.__module__}.{self.__qualname__}'
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/inflection-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/melcloud'...
Listing './lib/python3.5/site-packages/melcloud/async'...
Compiling './lib/python3.5/site-packages/melcloud/async/connection.py'...
***   File "./lib/python3.5/site-packages/melcloud/async/connection.py", line 20
    self.context_key: str = None
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/exceptions.py'...
***   File "./lib/python3.5/site-packages/melcloud/exceptions.py", line 19
    super(MELCloudError, self).__init__(f"(Error {num}) {message}", *args)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/melcloud/objects'...
Compiling './lib/python3.5/site-packages/melcloud/objects/account.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/account.py", line 12
    AL: int
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/objects/building.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/building.py", line 15
    access_level: int
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/objects/device.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/device.py", line 14
    access_level: int
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/objects/floor.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/floor.py", line 14
    access_level: int
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/objects/platform.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/platform.py", line 19
    self.language: LANGUAGES = language
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/melcloud/objects/preset.py'...
***   File "./lib/python3.5/site-packages/melcloud/objects/preset.py", line 9
    client: int
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/melcloud/sync'...
Listing './lib/python3.5/site-packages/melcloud-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
